# c-kzg

./: .gitignore  BUILD.bazel  CMakeLists.txt  WORKSPACE
bazel/: BUILD.blst  dep.bzl
cmake/: blst.cmake
src/: CMakeLists.txt
